--- a/src/index.html
+++ b/src/index.html
@@ -60,12 +60,12 @@
                 <div x-show="importMass" class="row">
                     <div class="form-group col-md">
                         <label for="from_page" class="float-right">از صفحه</label>
-                        <input type="number" id="from_page" x-model="pages.from" class="form-control text-center" dir="ltr">
+                        <input type="number" id="from_page" x-model.number="pages.from" class="form-control text-center" dir="ltr">
                     </div>
 
                     <div class="form-group col-md">
                         <label for="to_page" class="float-right">تا صفحه</label>
-                        <input type="number" id="to_page" x-model="pages.to" class="form-control text-center" dir="ltr">
+                        <input type="number" id="to_page" x-model.number="pages.to" class="form-control text-center" dir="ltr">
                     </div>
                 </div>
 
