--- a/src/index.html
+++ b/src/index.html
@@ -12,64 +12,157 @@
 <body dir="rtl">
 
 <div class="container p-3">
-    <div x-data="categories" class="justify-content-center" :class="loading ? 'd-flex' : ''">
-        <template x-if="loading">
-            <div class="row col">
-                <div class="alert alert-info col-12 text-right" x-show="importMass">
-                    آخرین صفحه:
-                    <strong x-text="pages.lastPage" class="mx-2"></strong>
-                </div>
+    <div x-data="tab">
+        <div class="row">
+            <template x-for="tab in tabs">
+                <p class="btn col"
+                   :class="currentTab===tab.key ? 'btn-secondary' : 'btn-outline-secondary'"
+                   @click="currentTab=tab.key"
+                   x-text="tab.title"></p>
+            </template>
+        </div>
 
-                <div class="spinner-border mx-auto"></div>
+        <template x-if="currentTab==='digikala'">
+            <div x-data="categories" class="justify-content-center" :class="loading ? 'd-flex' : ''">
+                <template x-if="loading">
+                    <div class="row col">
+                        <div class="alert alert-info col-12 text-right" x-show="importMass">
+                            آخرین صفحه:
+                            <strong x-text="pages.lastPage" class="mx-2"></strong>
+                        </div>
+
+                        <div class="spinner-border mx-auto"></div>
+                    </div>
+                </template>
+
+                <template x-if="!loading">
+                    <div>
+                        <nav x-show="breadCrumbs.length>0">
+                            <ol class="breadcrumb">
+                                <template x-for="crumb in breadCrumbs">
+                                    <li class="crumb pointer" @click="goToCrumb(crumb)" x-text="crumb.title"></li>
+                                </template>
+                            </ol>
+                        </nav>
+
+                        <ul class="nav d-flex flex-column text-right p-0">
+                            <template x-for="category in categories.filter(x=>x.parent_id===selectedCategory)">
+                                <li class="border rounded p-2 m-1 pointer" x-text="category.title" @click="selectCategory(category)"></li>
+                            </template>
+                        </ul>
+
+                        <hr class="my-3">
+
+                        <div class="form-check form-group text-right">
+                            <input class="form-check-input" id="importMass" type="checkbox" x-model="importMass">
+                            <label class="form-check-label pr-3" for="importMass">لیست گروهی</label>
+                        </div>
+
+                        <div x-show="!importMass" class="form-group">
+                            <label for="products" class="float-right">محصولات</label>
+                            <textarea id="products" x-model="products" class="form-control"></textarea>
+                        </div>
+
+                        <div x-show="importMass" class="form-group">
+                            <label for="product" class="float-right">لیست محصول</label>
+                            <input type="text" id="product" x-model="productList" class="form-control" dir="ltr">
+                        </div>
+
+                        <div x-show="importMass" class="row">
+                            <div class="form-group col-md">
+                                <label for="from_page" class="float-right">از صفحه</label>
+                                <input type="number" id="from_page" x-model.number="pages.from" class="form-control text-center" dir="ltr">
+                            </div>
+
+                            <div class="form-group col-md">
+                                <label for="to_page" class="float-right">تا صفحه</label>
+                                <input type="number" id="to_page" x-model.number="pages.to" class="form-control text-center" dir="ltr">
+                            </div>
+                        </div>
+
+                        <button class="btn btn-outline-success" @click="submitProducts" :disabled="!selectedCategory">ثبت محصولات</button>
+                    </div>
+                </template>
             </div>
         </template>
 
-        <template x-if="!loading">
-            <div>
-                <nav x-show="breadCrumbs.length>0">
-                    <ol class="breadcrumb">
-                        <template x-for="crumb in breadCrumbs">
-                            <li class="crumb pointer" @click="goToCrumb(crumb)" x-text="crumb.title"></li>
-                        </template>
-                    </ol>
-                </nav>
+        <template x-if="currentTab==='evano'">
+            <div x-data="evano">
+                <div class="form-group">
+                    <label for="phone" class="float-right">شماره موبایل</label>
 
-                <ul class="nav d-flex flex-column text-right p-0">
-                    <template x-for="category in categories.filter(x=>x.parent_id===selectedCategory)">
-                        <li class="border rounded p-2 m-1 pointer" x-text="category.title" @click="selectCategory(category)"></li>
-                    </template>
-                </ul>
+                    <input id="phone"
+                           type="number"
+                           class="form-control text-center"
+                           x-model.number="phone"
+                           :disabled="loading || showOtp"
+                           placeholder="شماره موبایل">
 
-                <hr class="my-3">
-
-                <div class="form-check form-group text-right">
-                    <input class="form-check-input" id="importMass" type="checkbox" x-model="importMass">
-                    <label class="form-check-label pr-3" for="importMass">لیست گروهی</label>
                 </div>
 
-                <div x-show="!importMass" class="form-group">
-                    <label for="products" class="float-right">محصولات</label>
-                    <textarea id="products" x-model="products" class="form-control"></textarea>
-                </div>
+                <template x-if="showOtp">
+                    <div class="form-group">
+                        <label for="otp" class="float-right">کد تایید</label>
 
-                <div x-show="importMass" class="form-group">
-                    <label for="product" class="float-right">لیست محصول</label>
-                    <input type="text" id="product" x-model="productList" class="form-control" dir="ltr">
-                </div>
-
-                <div x-show="importMass" class="row">
-                    <div class="form-group col-md">
-                        <label for="from_page" class="float-right">از صفحه</label>
-                        <input type="number" id="from_page" x-model.number="pages.from" class="form-control text-center" dir="ltr">
+                        <input id="otp"
+                               type="number"
+                               x-model.number="otp"
+                               class="form-control text-center"
+                               placeholder="کد تایید"/>
                     </div>
+                </template>
 
-                    <div class="form-group col-md">
-                        <label for="to_page" class="float-right">تا صفحه</label>
-                        <input type="number" id="to_page" x-model.number="pages.to" class="form-control text-center" dir="ltr">
+              <div class="row justify-content-center">
+                  <template x-if="!showOtp">
+                      <button class="btn btn-success mt-3 float-right"
+                              :disabled="loading"
+                              @click="sendOtp">
+                          درخواست کد
+                      </button>
+                  </template>
+
+                  <template x-if="showOtp">
+                      <button class="btn btn-success mt-3 float-right"
+                              :disabled="loading"
+                              @click="login">
+                          دریافت اطلاعات
+                      </button>
+                  </template>
+              </div>
+
+                <template x-if="user">
+                    <div class="text-right mt-2 border-top">
+
+                        <p>
+                            <strong>نام:</strong>
+                            <span x-text="user.firstname"></span>
+                        </p>
+
+                        <p>
+                            <strong>نام‌خانوادگی:</strong>
+                            <span x-text="user.lastname"></span>
+                        </p>
+
+                        <p>
+                            <strong>کدملی:</strong>
+                            <span x-text="user.nationalCode"></span>
+                        </p>
+
+                        <p>
+                            <strong>تاریخ تولد:</strong>
+                            <span x-text="user.birthDate"></span>
+                        </p>
+
+                        <p>
+                            <strong>جنسیت:</strong>
+                            <span x-text="user.gender==='MALE' ? 'مرد' : 'زن'"></span>
+                        </p>
+
+                        <button class="btn btn-outline-warning btn-block" @click="reset">
+                            از اول
+                        </button>
                     </div>
-                </div>
-
-                <button class="btn btn-outline-success" @click="submitProducts" :disabled="!selectedCategory">ثبت محصولات</button>
+                </template>
             </div>
         </template>
     </div>
